# uav-groundstation

./: .gitignore  .gitmodules  CMakeLists.txt
logic/: main.cpp
logic/inc/: ground_station.h  mavlink_radio.h  receiver.h  serial_port_config.h  switch_timed.h  thread.radio.h  thread_radio.h  transceiver.h  xcvr_thread.h
logic/src/: ground_station.cpp  receiver.cpp  switch_timed.cpp  thread_radio.cpp  transceiver.cpp  xcvr_thread.cpp
ui/: style.qss
ui/inc/: main_window.h  serial_config_box.h  sql_config_box.h  status_indicator.h  tab_1.h  tab_2.h  tab_3.h  telem_tbl.h  telemetry_status.h  usb_device_dropdown.h
ui/src/: main_window.cpp  serial_config_box.cpp  sql_config_box.cpp  status_indicator.cpp  tab_1.cpp  tab_2.cpp  tab_3.cpp  telem_tbl.cpp  telemetry_status.cpp  usb_device_dropdown.cpp
